--- a/front/src/app/navigation/navigation.component.html
+++ b/front/src/app/navigation/navigation.component.html
@@ -15,6 +15,9 @@
       <a class="nav-link" mat-list-item routerLink="/orders" routerLinkActive="is-active">
         <span class="material-icons"> add_shopping_cart </span>Orders
       </a>
+      <a class="nav-link" mat-list-item>
+        <span class="material-icons"> logout </span>Logout
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
